k8s/chat-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: chat-routing
  namespace: chat
spec:
  hosts:
    - "*"
  gateways:
    - chat-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: chat-service.chat.svc.cluster.local
            port:
              number: 80

    - match:
        - uri:
            prefix: /ws
      route:
        - destination:
            host: chat-service.chat.svc.cluster.local
            port:
              number: 80

    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend.chat.svc.cluster.local
            port:
              number: 80
